--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.24.0",
     "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
@@ -25,6 +26,7 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.14.1",
     "glob": "^11.0.0",
+    "googleapis": "^144.0.0",
     "gsap": "^3.12.7",
     "icons-react": "^3.7.1",
     "lenis": "^1.1.20",
