--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpack": "^5.97.1"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
